# UserLixo

./: .pre-commit-config.yaml  pyproject.toml
userlixo/: __main__.py  config.py  login.py
userlixo/database/: database.py
userlixo/decorators/: __init__.py
userlixo/modules/assistant/: __init__.py
userlixo/modules/assistant/about/callback_query/: about_callback_query_handler.py
userlixo/modules/assistant/command/callback_query/: info_command_callback_query_handler.py  list_commands_callback_query_handler.py
userlixo/modules/assistant/common/: plugins.py  sudoers.py
userlixo/modules/assistant/env_vars/callback_query/: __init__.py  edit_env_callback_query_handler.py  restart_now_callback_query_handler.py  setting_env_callback_query_handler.py  view_env_callback_query_handler.py
userlixo/modules/assistant/execs/message/: __init__.py  cmd_message_handler.py  eval_message_handler.py  exec_message_handler.py  execs_message_controller.py
userlixo/modules/assistant/help/callback_query/: help_callback_query_handler.py
userlixo/modules/assistant/inline_index/inline_query/: index_inline_query_handler.py
userlixo/modules/assistant/language/callback_query/: set_language_code_callback_query_handler.py  setting_language_callback_query_handler.py
userlixo/modules/assistant/ping/callback_query/: ping_callback_query_handler.py
userlixo/modules/assistant/plugin/callback_query/: add_plugin_callback_query_handler.py  cancel_plugin_callback_query_handler.py  confirm_add_plugin_callback_query_handler.py  info_plugin_callback_query_handler.py  list_plugins_callback_query_handler.py  plugin_setting_open_callback_query_handler.py  plugin_setting_reset_callback_query_handler.py  plugin_setting_select_callback_query_handler.py  (+4 more)
userlixo/modules/common/: commands.py  evals.py  execs.py  help.py  plugins.py  restart.py  settings.py  start.py  upgrade.py
userlixo/modules/userbot/: __init__.py
userlixo/strings/: __main__.py  en.yml  pt.yml
userlixo/types/: update_controller.py
userlixo/utils/: cache.py  patches.py  plugins.py  startup.py  validation.py
(+41 files in other folders)
